# conference.go

./: .gitignore  Dockerfile  Dockerfile.debug  gen-proto.cmd  gen-proto.sh  go.mod  go.sum  package-lock.json  result.txt  run-client.cmd  run-client.sh  run-server.sh
auth/: main.go  main_test.go
authserver/: main.go
client/: client.go  client_test.go  signal.go  token.go  websocket.go
cmd/authserver/: main.go
cmd/server/: main.go
cmd/singal/: main.go
cmd/try/: pooltest.go
config/: main.go  model.go  model_test.go  prom.go
cpp/client/: .gitignore  CMakeLists.txt  CMakePresets.json  nuget.config  vcpkg-configuration.json  vcpkg.json
cpp/client/cmake/: onnxruntimeConfig.cmake
cpp/client/src/: async.cpp  async_locker.cpp  basesink.cpp  capi.cpp  cinterface.cpp  client.cpp  coevent.cpp  configuration.cpp  error.cpp  gst_helper.c  gstcfgosrc.cpp  main.cpp  rtc_helper.cpp  sio_helper.cpp  subscribation.cpp  track.cpp  utils.cpp
cpp/client/src/gst/: appsink.cpp  cfgosrc.cpp  error.cpp  gstcfgosrc.cpp  gstcfgosrc_old.cpp  helper.c  link.cpp  pipeline.cpp  utils.cpp
cpp/client/src/impl/: client.cpp  client.hpp  link.cpp  link.hpp  pipeline.cpp  pipeline.hpp  subscribation.cpp  subscribation.hpp  track.cpp  track.hpp
cpp/client/src/private/cfgo/: coevent.hpp  cofuture.hpp  cothread.hpp  defer.hpp  message.hpp  move_only_function.hpp  rtc_helper.hpp  sio_helper.hpp  utils.hpp
cpp/client/src/private/cfgo/gst/: cfgosrc.hpp  gstcfgosrc_private_api.hpp
cpp/client/src/public/cfgo/: alias.hpp  async.hpp  async_locker.hpp  basesink.hpp  black_magic.hpp  capi.h  cbridge.hpp  cfgo.hpp  cinterface.h  client.hpp  common.hpp  configuration.hpp  coroutine_concepts.hpp  defer.hpp  error.hpp  exports.h  fmt.hpp  gst_helper.h  pattern.hpp  spd_helper.hpp  subscribation.hpp  track.hpp  utils.hpp
cpp/client/src/public/cfgo/config/: configuration.h  configuration.h.in
cpp/client/src/public/cfgo/gst/: appsink.hpp  error.h  error.hpp  gst.h  gst.hpp  gstcfgosrc.h  helper.h  link.hpp  pipeline.hpp  utils.hpp
cpp/client/src/test/: async.cpp  coevent.cpp  gst.cpp  gstreamer.cpp
cpp/client/src/test/cuda/: CMakeLists.txt  gst-cu.cu  gst-cu.cuh
entry/: main.go
errors/: main.go
hls/: hls.go  main.go  segment.go
js/app/: browser.js  package-lock.json  package.json  tsconfig.json
js/app/src/: App.css  App.tsx  Socket.ts  Socket.tsx  config-example.json  hls.tsx  index.tsx
js/client/: bundle.sh  package-lock.json  package.json  tsconfig.json  tsup.config.ts
js/client/src/: async.ts  errors.ts  index.ts  log.ts  message.ts  pattern.ts  timeout.ts  types.ts
log/: main.go
middleware/: gin.go  socketio.go
model/: common.go  messages.go  pattern.go
pkg/common/: labeledtrack.go  reflect.go  reflect_test.go
pkg/mpd/: mpd.go  schema.go
pkg/samplebuilder/: samplebuilder.go
pkg/segmenter/: h264dtsextractor.go  hlslibserver.go  mpd.go  muxer.go  muxer.go.backup  muxer_part.go  muxer_segment.go  muxer_segment.go.backup  muxer_segment_fmp4.go  muxer_segment_mpegts.go  muxer_segmenter.go  muxer_segmenter_fmp4.go  muxer_segmenter_fmp4.go.backup  muxer_segmenter_mpegts.go  muxer_segmenter_mpegts.go.backup  segmenter.go  storage.go  utils.go
proto/: message.ext.go  message.pb.go  message.proto  room.pb.go  room.proto
python/client/: pyproject.toml  test.py
python/client/conference/: client.py  common.py  log.py  messages.py  pattern.py  stream.py  test.py  utils.py
signal/: callback.go  cluster.go  common.go  global.go  kafka.go  main.go  messager.go  messages.go  model.go  pattern.go  prom.go  proxy.go  record.go  redis.go  router.go  rtp.go  signal.go  socketio.go  utils.go  utils_test.go  websocket.go
signalserver/: main.go
singal/: model.go
utils/: collection.go  collection_test.go  context.go  lang.go  string.go  test.go
websocket/: signal.go
